force-app/main/default/objects/Account/fields/AradhyaActive__c.field-meta.xml
<CustomField>
    <fullName>AradhyaActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AradhyaActive</label>
    <type>Checkbox</type>
</CustomField>