force-app/main/default/objects/Account/fields/CQ_CCD_Total_Expenses__c.field-meta.xml
<CustomField>
    <fullName>CQ_CCD_Total_Expenses__c</fullName>
    <description>Records Total Number of Expenses done for particular Account</description>
    <label>Total Number Of Expenses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>