force-app/main/default/objects/Account/fields/CQ_CCD_Total_Sum_Of_Expenses__c.field-meta.xml
<CustomField>
    <fullName>CQ_CCD_Total_Sum_Of_Expenses__c</fullName>
    <description>Records total sum of expenses done in particular account</description>
    <label>Total Sum Of Expenses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>