force-app/main/default/objects/Account/listViews/compliancequest__AllAccounts.listView-meta.xml
<ListView>
    <fullName>compliancequest__AllAccounts</fullName>
    <filterScope>Everything</filterScope>
    <label>All Accounts</label>
</ListView>